# AI_Trip_Planner

./: pyproject.toml  requirements.txt  setup.py
config/: config.yaml
notebooks/: experiments.ipynb
tools/: arithamatic_op_tool.py
utils/: config_loader.py  currency_converter.py  model_loader.py  weather_info.py
