[project]
name = "ai-trip-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.124.0",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "langchain>=1.1.2",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.0",
    "langchain-google-community[places]>=3.0.2",
    "langchain-groq>=1.1.0",
    "langchain-openai>=1.1.1",
    "langchain-tavily>=0.2.13",
    "langgraph>=1.0.4",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.1",
    "uvicorn>=0.38.0",
]
